--- a/YumBlazor/Components/_Imports.razor
+++ b/YumBlazor/Components/_Imports.razor
@@ -9,3 +9,7 @@
 @using Microsoft.JSInterop
 @using YumBlazor
 @using YumBlazor.Components
+@using YumBlazor.Data
+@using YumBlazor.Repository.IRepository
+@using YumBlazor.Extentions
+@using YumBlazor.Components.Shared
